feat(api): paging情報を返すように（posture）